--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
 <div>
-
+<img src="/images/beer.png">
+<button type ="button">Check the Beers!</button>
+<button type ="button">Check a Random Beer</button>
 </div>
